--- a/tcamt-lite-client/app/views/edit/editTestStep.html
+++ b/tcamt-lite-client/app/views/edit/editTestStep.html
@@ -1223,57 +1223,57 @@ body {
 	</div>
 </script>
 <script type="text/ng-template" id="validation.html">
-<uib-tabset active="active">
-				<uib-tab ng-repeat="(key, value) in validationResult.detections" ng-if="key!=='Affirmative'">
-     			 <uib-tab-heading>
-        				 {{key}}s
-     			 </uib-tab-heading>
-				<uib-tabset active="active">
-				<uib-tab>
-     				 <uib-tab-heading>
-        				<span class="badge">{{getAllValue(validationResult.detections[key]).length}}</span> All
-     			 	</uib-tab-heading>
-    			 	<table class="table table-striped table-bordered">
-     			 <thead class="tbl-header" style="background-color: #4c70bb !important;">
-     			 	<th>Path</th>
-     			 	<th>Description</th>
-     			 	<th>Line#</th>
-     			 </thead>
-     			 <tbody>
-     			 
-     			 	<tr ng-repeat="const in getAllValue(validationResult.detections[key])">
-     			 		<td>{{const.path}}</td>
-     			 		<td>{{const.description}}</td>
-     			 		<td>{{const.line}}</td>
-     			 	</tr>
-     			 </tbody>
-     			 </table>
- 			 	</uib-tab>
-					<uib-tab ng-repeat="(key, value) in validationResult.detections[key]">
-     				 <uib-tab-heading>
-        				<span class="badge">{{value.length}}</span> {{key}}
-     			 	</uib-tab-heading>
-    			 	<table class="table table-striped table-bordered">
-     			 <thead class="tbl-header" style="background-color: #4c70bb !important;">
-     			 	<th>Path</th>
-     			 	<th>Description</th>
-     			 	<th>Line#</th>
-     			 </thead>
-     			 <tbody>
-     			 
-     			 	<tr ng-repeat="const in value">
-     			 		<td>{{const.path}}</td>
-     			 		<td>{{const.description}}</td>
-     			 		<td>{{const.line}}</td>
-     			 	</tr>
-     			 </tbody>
-     			 </table>
- 			 	</uib-tab>
-  				</uib-tabset>
-  				</uib-tab>
-  				</uib-tabset>
-  				</div>
-</script>
+	<uib-tabset active="active">
+					<uib-tab ng-repeat="key in ['Error', 'Warning', 'Alert']">
+							<uib-tab-heading>
+									 {{key}}s
+							</uib-tab-heading>
+					<uib-tabset active="active">
+					<uib-tab>
+								<uib-tab-heading>
+									<span class="badge">{{getAllValue(validationResult.detections[key]).length}}</span> All
+								</uib-tab-heading>
+							 <table class="table table-striped table-bordered">
+							<thead class="tbl-header" style="background-color: #4c70bb !important;">
+								<th>Path</th>
+								<th>Description</th>
+								<th>Line#</th>
+							</thead>
+							<tbody>
+							
+								<tr ng-repeat="const in getAllValue(validationResult.detections[key])">
+									<td>{{const.path}}</td>
+									<td>{{const.description}}</td>
+									<td>{{const.line}}</td>
+								</tr>
+							</tbody>
+							</table>
+						</uib-tab>
+						<uib-tab ng-repeat="(key, value) in validationResult.detections[key]">
+								<uib-tab-heading>
+									<span class="badge">{{value.length}}</span> {{key}}
+								</uib-tab-heading>
+							 <table class="table table-striped table-bordered">
+							<thead class="tbl-header" style="background-color: #4c70bb !important;">
+								<th>Path</th>
+								<th>Description</th>
+								<th>Line#</th>
+							</thead>
+							<tbody>
+							
+								<tr ng-repeat="const in value">
+									<td>{{const.path}}</td>
+									<td>{{const.description}}</td>
+									<td>{{const.line}}</td>
+								</tr>
+							</tbody>
+							</table>
+						</uib-tab>
+						</uib-tabset>
+						</uib-tab>
+						</uib-tabset>
+						</div>
+	</script>
 <script type="text/ng-template" id="validationInfo.html">
     <div class="modal-header ng-scope">
                 <span style="font-weight: bold; font-size: 20px">
